Implement a new feature that allows extending a running maintenance (#11)
* Fix openapi.yml

* Extend a maintenance

Extend a running maitenance for the given amount of
minutes. Fix #8.

* Fix version problems in dev requirements
